# jaeger-tracing-fastapi

./: .yamllint  Dockerfile  README.md  compose-jaeger.yml  compose.yml  main.py  pyproject.toml  utils.py
asp_net/: .dockerignore  Dockerfile  Program.cs  asp_net.csproj
asp_net/Properties/: launchSettings.json
docker/: compose.override.yml  compose.yml
docker/etc/collector/: otel-collector-config.yml
docker/etc/loki/: loki-config.yml
docker/etc/prometheus/: prometheus.yml
docker/services/: aspnet.yml  fastapi.yml  grafana.yml  jaeger.yml  otel.yml  time_service.yml
etc/prometheus/: prometheus.yml
fastapi/: main.py  pyproject.toml  requirements.txt
gateway/: compose.yml  deploy.sh
